# Corvus

./: .gitignore  .prettierignore  AUDIT_REPORT.md  CONTRIBUTING.md  DEPLOY_RENDER.md  Instructions.md  MIGRATION_LOG.md  README.md  VERCEL.md  eslint.config.mjs  generate-icons.cjs  package.json  pnpm-lock.yaml  render.yaml  turbo.json
.claude/: settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/api/: .env.example  package.json  tsconfig.json  tsconfig.vercel.json  vercel.json
apps/api/api/: index.ts
apps/api/prisma/: schema.prisma
apps/api/scripts/: setup-storage.ts  upload-release.ts  verify-all.ts
apps/api/src/: app.ts  docs.ts  env.ts  index.ts  ws.ts
apps/desktop/: generate-icons.cjs  generate-icons.mjs  make_nsis_assets.js  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: .env.example  .env.local.example  errors.txt  generate-icons.cjs  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/data/: mockData.ts
apps/web/hooks/: useDesktop.ts  useLivekitLatency.ts  useMessageCache.ts  useNoiseSuppression.ts  usePushToTalk.ts  (+4 more)
docs/: MIGRATION_LOG.md  REDESIGN_PLAN.md  VERCEL.md
supabase/: realtime-policies.sql
supabase/migrations/: 20260605000000_init.sql  20260612000000_sync_workspace_modules.sql  20260616000000_waitlist.sql
(+270 files in other folders)
