[package]
name = "veyra-desktop"
version = "0.0.1"
description = "Veyra Desktop Application"
authors = ["Veyra Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2.10.0"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-os = "2.3.2"
tauri-plugin-process = "2.3.1"
